# padlet-mcp

./: .gitignore  README.md  pyproject.toml
src/padlet_mcp/: server.py
