[project]
name = "padlet-mcp"
version = "0.1.0"
description = "MCP server exposing Padlet boards/posts (list_boards, get_board, create_post) via the Padlet REST API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28",
    "mcp[cli]>=1.28.1",
]

[project.scripts]
padlet-mcp = "padlet_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/padlet_mcp"]
